fix spacing issues

--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -177,7 +177,7 @@ nav {
 }
 
 .more-link {
-  width: 65px;
+  width: 85px;
 }
 
 .image-cat {
